[gd_scene load_steps=40 format=2]

[ext_resource path="res://Player/Space/SpaceIn_Air.gd" type="Script" id=1]
[ext_resource path="res://Player/Space/SpaceIdle.gd" type="Script" id=2]
[ext_resource path="res://Player/Space/SpaceMoving.gd" type="Script" id=3]
[ext_resource path="res://Player/Space/SpacePlayer.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Our Sprites/Player/Space/Idle.png" type="Texture" id=5]
[ext_resource path="res://Player/StateMachine/State_Machine.gd" type="Script" id=6]
[ext_resource path="res://Updated_Assets/Assets/Player/Space/Laser_Cannon.png" type="Texture" id=7]
[ext_resource path="res://Updated_Assets/Assets/Player/Space/Laser_Impact.png" type="Texture" id=8]
[ext_resource path="res://Updated_Assets/Assets/Player/Space/HDLaser.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Our Sprites/Player/Space/Death.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Our Sprites/Player/Space/Jump.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Our Sprites/Player/Space/Run.png" type="Texture" id=12]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 14.0

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 11 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 67
collision_mask = 65
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.875, 0.875 )
frames = SubResource( 3 )
animation = "Idle"
frame = 1
playing = true

[node name="State_Machine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Moving" type="Node" parent="State_Machine"]
script = ExtResource( 3 )

[node name="In_Air" type="Node" parent="State_Machine"]
script = ExtResource( 1 )

[node name="Idle" type="Node" parent="State_Machine"]
script = ExtResource( 2 )

[node name="Detect_Ground" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 128

[node name="Weapon_Joint" type="Node2D" parent="."]
position = Vector2( -1.63913e-07, 5 )
rotation = -5.92539

[node name="Weapon_Sprite" type="Sprite" parent="Weapon_Joint"]
position = Vector2( 2.81002, -1.05062 )
scale = Vector2( 0.45, 0.45 )
z_index = 1
texture = ExtResource( 7 )

[node name="Weapon_Muzzle" type="Node2D" parent="Weapon_Joint"]
position = Vector2( 9.5, -0.5 )

[node name="Line2D" type="Line2D" parent="Weapon_Joint/Weapon_Muzzle"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 9 )
texture_mode = 1

[node name="Beam_RayCast" type="RayCast2D" parent="Weapon_Joint/Weapon_Muzzle"]
enabled = true
cast_to = Vector2( 500, 0 )
collision_mask = 140
collide_with_areas = true

[node name="Beam_End" type="Node2D" parent="Weapon_Joint/Weapon_Muzzle"]
position = Vector2( 500, 0 )

[node name="Enemy_Detect1" type="RayCast2D" parent="Weapon_Joint/Weapon_Muzzle"]
enabled = true
cast_to = Vector2( 500, 0 )
collision_mask = 141

[node name="Enemy_Detect2" type="RayCast2D" parent="Weapon_Joint/Weapon_Muzzle"]
enabled = true
cast_to = Vector2( 500, 0 )
collision_mask = 141

[node name="Sparks" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 4 )
frame = 1
playing = true
